--- a/index.html
+++ b/index.html
@@ -142,115 +142,86 @@
           </audio>
         </div>
       </div>
-      <div class="grid grid-cols-1 gap-4"></div>
-      <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
-        <h3 class="text-sm font-medium mb-4">Socials</h3>
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-3 place-items-center"><a
-            class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://discord.com/users/577300949044035584" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z">
-                </path>
-              </svg></div><span class="text-sm">Discord</span>
-          </a><a
-            class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://steamcommunity.com/id/wrk999/" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M.329 10.333A8.01 8.01 0 0 0 7.99 16C12.414 16 16 12.418 16 8s-3.586-8-8.009-8A8.006 8.006 0 0 0 0 7.468l.003.006 4.304 1.769A2.198 2.198 0 0 1 5.62 8.88l1.96-2.844-.001-.04a3.046 3.046 0 0 1 3.042-3.043 3.046 3.046 0 0 1 3.042 3.043 3.047 3.047 0 0 1-3.111 3.044l-2.804 2a2.223 2.223 0 0 1-3.075 2.11 2.217 2.217 0 0 1-1.312-1.568L.33 10.333Z">
-                </path>
-                <path
-                  d="M4.868 12.683a1.715 1.715 0 0 0 1.318-3.165 1.705 1.705 0 0 0-1.263-.02l1.023.424a1.261 1.261 0 1 1-.97 2.33l-.99-.41a1.7 1.7 0 0 0 .882.84Zm3.726-6.687a2.03 2.03 0 0 0 2.027 2.029 2.03 2.03 0 0 0 2.027-2.029 2.03 2.03 0 0 0-2.027-2.027 2.03 2.03 0 0 0-2.027 2.027Zm2.03-1.527a1.524 1.524 0 1 1-.002 3.048 1.524 1.524 0 0 1 .002-3.048Z">
-                </path>
-              </svg></div><span class="text-sm">Steam</span>
-          </a><a
-            class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://www.roblox.com/users/1026048574/profile" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M5.164 0L0 4.857l.008 14.286L5.164 24l4.197-5.143L5.165 14l4.196-4.857L5.164 4.57l4.197-4.57L5.164 0zm13.672 0l-4.197 4.57 4.197 4.573-4.197 4.857 4.197 4.857L23.03 24 24 19.143 23.992 4.857 18.836 0z">
-                </path>
-              </svg></div><span class="text-sm">Roblox</span>
-          </a>
-          <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://instagram.com/up4i" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-.5a1.5 1.5 0 1 0 .001 2.999A1.5 1.5 0 0 0 16.5 5.5z">
-                </path>
-              </svg></div>
-            <span class="text-sm">Instagram</span>
-          </a>
-          <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://t.me/wrkfn" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M9.993 16.207l-.39 5.513c.561 0 .806-.242 1.099-.531l2.637-2.51 5.47 3.983c1.003.553 1.718.263 2.01-.928L24 4.35c.314-1.305-.467-1.817-1.408-1.486L1.115 9.63C-.24 10.158-.22 10.944.93 11.284l5.738 1.79L19.288 6.27c.63-.393 1.21-.175.736.25L9.993 16.207z">
-                </path>
-              </svg></div>
-            <span class="text-sm">Telegram</span>
-          </a>
-          <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://discord.gg/wrks" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-              <svg fill="currentColor" height="20" viewbox="0 0 16 16" width="20" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z">
-                </path>
-              </svg>
-            </div>
-            <span class="text-sm">/wrks</span>
-          </a>
-        </div>
+     <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
+  <h3 class="text-sm font-medium mb-4">Socials</h3>
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3 place-items-center">
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://discord.com/users/577300949044035584" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path>
+        </svg>
       </div>
-      <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
-        <h3 class="text-sm font-medium mb-4">Payments</h3>
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-3 place-items-center"><a
-            class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://www.paypal.com/paypalme/g6zey" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
-                <path d="M5 3h14a2 2 0 0 1 2 2v1H3V5a2 2 0 0 1 2-2zM3 8h18v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8z"></path>
-              </svg></div><span class="text-sm">PayPal</span>
-          </a><a
-            class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300"
-            href="https://cash.app/$sleepydidit" rel="noopener noreferrer" target="_blank">
-            <div
-              class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
-                <path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"></path>
-              </svg></div><span class="text-sm">Cashapp</span>
-          </a><button
-            class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300"
-            onclick="copyToClipboard('0x02746807aB8a2a88d3D93dE3c595259984dDE738')">
-            <div
-              class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 320 512" width="22">
-                <path d="M160 0L0 256l160 112 160-112L160 0z"></path>
-              </svg></div><span class="text-sm">ETH</span>
-          </button><button
-            class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300"
-            onclick="copyToClipboard('MSPTT8F24NtXmLwFJq7rEE4CLWNyww28is')">
-            <div
-              class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-              <svg fill="currentColor" height="22" viewbox="0 0 320 512" width="22">
-                <path d="M160 0L120 160h40l-40 192h80l-40 160h80l40-160h40l40-192H200l40-160H160z"></path>
-              </svg></div><span class="text-sm">LTC</span>
-          </button></div>
+      <span class="text-sm">Discord</span>
+    </a>
+
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://steamcommunity.com/id/wrk999/" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M.329 10.333A8.01 8.01 0 0 0 7.99 16C12.414 16 16 12.418 16 8s-3.586-8-8.009-8A8.006 8.006 0 0 0 0 7.468l.003.006 4.304 1.769A2.198 2.198 0 0 1 5.62 8.88l1.96-2.844-.001-.04a3.046 3.046 0 0 1 3.042-3.043 3.046 3.046 0 0 1 3.042 3.043 3.047 3.047 0 0 1-3.111 3.044l-2.804 2a2.223 2.223 0 0 1-3.075 2.11 2.217 2.217 0 0 1-1.312-1.568L.33 10.333Z"></path>
+          <path d="M4.868 12.683a1.715 1.715 0 0 0 1.318-3.165 1.705 1.705 0 0 0-1.263-.02l1.023.424a1.261 1.261 0 1 1-.97 2.33l-.99-.41a1.7 1.7 0 0 0 .882.84Zm3.726-6.687a2.03 2.03 0 0 0 2.027 2.029 2.03 2.03 0 0 0 2.027-2.029 2.03 2.03 0 0 0-2.027-2.027 2.03 2.03 0 0 0-2.027 2.027Zm2.03-1.527a1.524 1.524 0 1 1-.002 3.048 1.524 1.524 0 0 1 .002-3.048Z"></path>
+        </svg>
       </div>
+      <span class="text-sm">Steam</span>
+    </a>
+
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://instagram.com/up4i" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-.5a1.5 1.5 0 1 0 .001 2.999A1.5 1.5 0 0 0 16.5 5.5z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">Instagram</span>
+    </a>
+
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://t.me/ogkush" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M9.993 16.207l-.39 5.513c.561 0 .806-.242 1.099-.531l2.637-2.51 5.47 3.983c1.003.553 1.718.263 2.01-.928L24 4.35c.314-1.305-.467-1.817-1.408-1.486L1.115 9.63C-.24 10.158-.22 10.944.93 11.284l5.738 1.79L19.288 6.27c.63-.393 1.21-.175.736.25L9.993 16.207z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">Telegram</span>
+    </a>
+  </div>
+</div>
+
+<div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
+  <h3 class="text-sm font-medium mb-4">Payments</h3>
+  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 gap-3 place-items-center">
+    <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://www.paypal.com/paypalme/g6zey" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
+          <path d="M5 3h14a2 2 0 0 1 2 2v1H3V5a2 2 0 0 1 2-2zM3 8h18v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">PayPal</span>
+    </a>
+
+    <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+       href="https://cash.app/$sleepydidit" rel="noopener noreferrer" target="_blank">
+      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
+          <path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">Cashapp</span>
+    </a>
+
+    <button class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+            onclick="copyToClipboard('hatedisugly.ton')">
+      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">TON</span>
+    </button>
+  </div>
+</div>
       <div class="text-center text-zinc-500 text-sm mt-4">
         <p>999 wrld.</p>
       </div>
@@ -553,8 +524,7 @@ document.addEventListener('DOMContentLoaded', function() {
     "Cybersecurity Student",
     "Physical Security Developer",
     "Founder @ /wrks",
-    "I own 999 FG @ /apocs",
-    "Apocs on top hoe <3",
+    "@ogkush on telegram <3",
     "I love my beautiful wife!!!!"
   ];
 
